--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,7 +40,8 @@ dependencies:
   device_preview: ^1.1.0
   icons_plus: ^4.0.0
   intl_phone_field: ^3.2.0
-
+  dio: ^5.4.0
+  dartz: ^0.10.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
