--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,11 @@ dependencies:
   intl_phone_field: ^3.2.0
   dio: ^5.4.0
   dartz: ^0.10.1
+  url_launcher: ^6.3.0
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
+
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
