--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,7 +2,7 @@ name: project_graduation
 description: "A new Flutter project."
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
@@ -31,7 +31,6 @@ dependencies:
   flutter:
     sdk: flutter
 
-
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
@@ -42,10 +41,15 @@ dependencies:
   intl_phone_field: ^3.2.0
   dio: ^5.4.0
   dartz: ^0.10.1
-  url_launcher: ^6.3.0
+  url_launcher: ^6.3.1
   hive: ^2.2.3
   hive_flutter: ^1.1.0
-
+  app_links: ^6.3.2
+  fl_chart: ^0.36.4
+  animated_bottom_navigation_bar: ^1.3.3
+  flutter_native_splash: ^2.4.2
+  flutter_localization: ^0.2.2
+  flutter_svg: ^2.0.14
 
 dev_dependencies:
   flutter_test:
@@ -63,7 +67,6 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
-
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
@@ -72,7 +75,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
-
+    - assets/Localization/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
@@ -85,17 +88,19 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
+  fonts:
+    - family: DG_Baysan_Bold
+      fonts:
+        - asset: assets/Fonts/DG Baysan Bold.ttf
+    - family: DG_Baysan_Light
+      fonts:
+        - asset: assets/Fonts/DG Baysan Light.ttf
+    - family: DG_Baysan_Regular
+      fonts:
+        - asset: assets/Fonts/DG Baysan Regular.ttf
+    - family: DG_Baysan_Semibold
+      fonts:
+        - asset: assets/Fonts/DG Baysan Semibold.ttf
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/to/font-from-package
