--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,8 @@ dependencies:
   flutter_native_splash: ^2.4.2
   flutter_localization: ^0.2.2
   flutter_svg: ^2.0.14
+  file_picker: ^5.0.1
+  dotted_border: ^2.0.0
 
 dev_dependencies:
   flutter_test:
