--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,7 @@ dependencies:
   file_picker: ^5.0.1
   dotted_border: ^2.0.0
   top_snackbar_flutter: ^3.1.0
+  firebase_core: ^3.10.1
 
 dev_dependencies:
   flutter_test:
