--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,10 @@ dependencies:
   dotted_border: ^2.0.0
   top_snackbar_flutter: ^3.1.0
   firebase_core: ^3.10.1
+  firebase_messaging: ^15.2.1
+  get_time_ago: ^2.2.0
+  text_gradiate: ^1.0.1
+  super_context_menu: ^0.8.24
 
 dev_dependencies:
   flutter_test:
